# MindClaw

./: .gitignore  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  pyproject.toml
docs/: architecture.md
docs/superpowers/specs/: 2026-05-08-orchestration-core-design.md
mindclaw/: __main__.py  config.py
mindclaw/cli/: __init__.py  commands.py  main.py
mindclaw/decomposer/: __init__.py  interface.py  mock_decomposer.py
mindclaw/messaging/: __init__.py  models.py
mindclaw/orchestrator/: __init__.py  models.py  service.py
mindclaw/runtime/: __init__.py  base.py  models.py  registry.py
mindclaw/scheduler/: __init__.py  engine.py  graph.py
mindclaw/state/: __init__.py  store.py
mindclaw/task/: __init__.py  models.py
mindclaw/team/: __init__.py  models.py
mindclaw/tracker/: __init__.py  tracker.py
mindclaw/worker_pool/: __init__.py  interface.py  manager.py  mock_backend.py
mindclaw/workspace/: __init__.py  models.py
tests/: test_domain_models.py  test_orchestration_pipeline.py  test_state_store.py
